# steering_run_verifier_v0_1_1

./: .gitignore  Cargo.toml  README.md
examples/: image_run_witness_example.json  kernel_witness_example.json  steering_run_witness_example.json
examples/cas/: cid_metric_code_v0_1_1  cid_training_data_v0_1_1
examples/image_run_cas/: cid_irw_schema_v0_1  cid_irw_verifier_v0_1
examples/irw/: irw_gate_transcript.json
examples/kernel_cas/: cid_kw_schema_v1_1  cid_kw_verifier_v1_1
runs/: verify_transcript.json
runs/188:    "cid_run": "bce8b7c4a69d4e56f96cc0e8e1f33c0a51af742e6d872a4dc402601365ccafb6",/cas/: cid_metric_results_v0_1_1  cid_prompt_suite_v0_1_1  cid_schema_v0_1_1  cid_tokenizer_dummy_v0_1_1  cid_weights_dummy_v0_1_1
runs/cas/: cid_out_firsttok_v0_1_1  cid_verifier_v0_1_1
schema/: kernel_witness_v1_1.schema.json
src/: canonical.rs  hash.rs  kernel.rs  lib.rs  main.rs  overlap.rs  verify.rs
tests/: kernel_invariance_prop.rs
