[package]
name = "steering_run_verifier"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
jsonschema = "0.18"
half = "2"


[dev-dependencies]
proptest = "1"
